添加eslint测试js机制。

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "scripts": {
     "start": "cross-env NODE_ENV=development node server",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.prod.config.js --color -p --progress"
+    "build": "cross-env NODE_ENV=production webpack --config webpack.prod.config.js --color -p --progress",
+    "lint": "eslint app/**"
   },
   "keywords": [
     "winter",
@@ -69,13 +70,71 @@
         "jsx": true
       }
     },
-    "settings": {
-      "import/resolver": {
-        "webpack": {
-          "config": "./internals/webpack/webpack.test.babel.js"
-        }
-      }
-    }
+    "rules": {
+      // 要求箭头函数的参数使用圆括号
+      "arrow-parens": [
+        "error",
+        "always"
+      ],
+      // 要求箭头函数体使用大括号
+      "arrow-body-style": [
+        2,
+        "as-needed"
+      ],
+      // 要求或禁止末尾逗号
+      "comma-dangle": [
+        2,
+        "always-multiline"
+      ],
+      // 强制使用一致的缩进
+      "indent": ["error", "tab", { "VariableDeclarator": 1 }],
+
+      "import/imports-first": 0,
+      "import/newline-after-import": 0,
+      "import/no-dynamic-require": 0,
+      "import/no-extraneous-dependencies": 0,
+      "import/no-named-as-default": 0,
+      "import/no-unresolved": 2,
+      "import/prefer-default-export": 0,
+      
+      // 详见https://github.com/evcohen/eslint-plugin-jsx-a11y
+      "jsx-a11y/aria-props": 2,
+      "jsx-a11y/heading-has-content": 0,
+      "jsx-a11y/href-no-hash": 2,
+      "jsx-a11y/label-has-for": 2,
+      "jsx-a11y/mouse-events-have-key-events": 2,
+      "jsx-a11y/role-has-required-aria-props": 2,
+      "jsx-a11y/role-supports-aria-props": 2,
+
+      // 强制一行的最大长度
+      "max-len": 0,
+      // 要求方法链中每个调用都有一个换行符
+      "newline-per-chained-call": 0,
+      // 禁用 console
+      "no-console": 1,
+      // 禁止在变量定义之前使用它们
+      "no-use-before-define": 0,
+      // 要求使用模板字面量而非字符串连接
+      "prefer-template": 2,
+      // this指向问题
+      "class-methods-use-this": 0,
+
+      // 详见https://github.com/yannickcr/eslint-plugin-react
+      "react/forbid-prop-types": 0,
+      "react/jsx-first-prop-new-line": [
+        2,
+        "multiline"
+      ],
+      "react/jsx-filename-extension": 0,
+      "react/jsx-no-target-blank": 0,
+      "react/require-extension": 0,
+      "react/self-closing-comp": 0,
+
+      // 详见https://github.com/pke/eslint-plugin-redux-saga
+      "redux-saga/no-yield-in-race": 2,
+      "redux-saga/yield-effects": 2,
+      "require-yield": 0
+    },
   },
   "devDependencies": {
     "babel-core": "6.18.0",
@@ -93,6 +152,11 @@
     "babel-preset-stage-0": "6.16.0",
     "css-loader": "0.25.0",
     "eslint": "3.9.0",
+    "eslint-config-airbnb": "12.0.0",
+    "eslint-plugin-import": "2.0.1",
+    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-react": "6.4.1",
+    "eslint-plugin-redux-saga": "0.1.5",
     "eventsource-polyfill": "0.9.6",
     "expect": "1.20.2",
     "expect-jsx": "2.6.0",
