--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
         2,
         "always-multiline"
       ],
-      "indent": ["error", "tab", { "VariableDeclarator": 1 }],
+      "indent": ["error", 4],
+      "linebreak-style": ["error", "windows"],
 
       "import/imports-first": 0,
       "import/newline-after-import": 0,
@@ -121,7 +122,7 @@
       "redux-saga/no-yield-in-race": 2,
       "redux-saga/yield-effects": 2,
       "require-yield": 0
-    },
+    }
   },
   "devDependencies": {
     "babel-core": "6.18.0",
