--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
       "import/no-dynamic-require": 0,
       "import/no-extraneous-dependencies": 0,
       "import/no-named-as-default": 0,
-      "import/no-unresolved": 2,
+      "import/no-unresolved": 0,
       "import/prefer-default-export": 0,
       
       "jsx-a11y/aria-props": 2,
@@ -103,10 +103,7 @@
       "class-methods-use-this": 0,
 
       "react/forbid-prop-types": 0,
-      "react/jsx-first-prop-new-line": [
-        2,
-        "multiline"
-      ],
+      "react/jsx-first-prop-new-line": [2, "multiline"],
       "react/jsx-filename-extension": 0,
       "react/jsx-no-target-blank": 0,
       "react/require-extension": 0,
