去除 import 文件后缀名 .js 的检测。

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
       "import/no-named-as-default": 0,
       "import/no-unresolved": 0,
       "import/prefer-default-export": 0,
+      "import/extensions": 0,
       
       "jsx-a11y/aria-props": 2,
       "jsx-a11y/heading-has-content": 0,
