--- a/package.json
+++ b/package.json
@@ -109,6 +109,8 @@
       "react/jsx-no-target-blank": 0,
       "react/require-extension": 0,
       "react/self-closing-comp": 0,
+      "react/jsx-indent": [2, "tab"],
+      "react/jsx-indent-props": [2, "tab"],
 
       "redux-saga/no-yield-in-race": 2,
       "redux-saga/yield-effects": 2,
