--- a/.eslintrc
+++ b/.eslintrc
@@ -24,7 +24,7 @@
       "arrow-body-style": [2, "as-needed"],
       "comma-dangle": [2, "always-multiline"],
       "indent": 0,
-      "linebreak-style": ["error", "windows"],
+      "linebreak-style": 0,
       "no-tabs": 0,
       "no-param-reassign": ["error", {"props": false}],
       "no-constant-condition": ["error", { "checkLoops": false }],
