--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     }
   },
   "devDependencies": {
+    "antd": "2.1.0",
     "babel-core": "6.18.0",
     "babel-eslint": "7.1.0",
     "babel-loader": "6.2.7",
