--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "classnames": "2.2.5",
     "compression": "1.6.2",
     "cross-env": "3.1.3",
+    "echarts": "3.4.0",
     "express": "4.14.0",
     "immutable": "3.8.1",
     "intl": "1.2.5",
