--- a/package.json
+++ b/package.json
@@ -105,6 +105,9 @@
     "intl": "1.2.5",
     "invariant": "2.2.1",
     "ip": "1.1.3",
+    "jquery": "3.1.1",
+    "jquery-mousewheel": "3.1.13",
+    "jquery.mb.browser": "1.0.0",
     "localforage": "1.4.3",
     "lodash": "4.16.4",
     "minimist": "1.2.0",
