--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "intl": "1.2.5",
     "invariant": "2.2.1",
     "ip": "1.1.3",
+    "leaflet": "1.0.3",
     "localforage": "1.4.3",
     "lodash": "4.16.4",
     "minimist": "1.2.0",
