--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "compression": "1.6.2",
     "cross-env": "3.1.3",
     "echarts": "3.4.0",
+    "echarts-for-react": "^1.1.6",
     "express": "4.14.0",
     "immutable": "3.8.1",
     "intl": "1.2.5",
